# fastapi-nix-starter

./: flake.nix  pyproject.toml
